--- a/libs/client-web/browse/feature/books/src/lib/filters/filters.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/filters/filters.component.html
@@ -1,11 +1,16 @@
 <div
   class="hidden xl:block sticky top-8 h-content rounded-base overflow-y-auto w-full"
 >
-  <ng-container [ngTemplateOutlet]="filters" />
+  <div class="min-h-min rounded-base overflow-hidden">
+    <ng-container [ngTemplateOutlet]="filters" />
+  </div>
 </div>
 
 <p-button
+  severity="secondary"
+  size="large"
   class="xl:hidden"
+  [plain]="true"
   icon="pi pi-bars"
   (onClick)="sidebarVisible.set(true)"
 />
@@ -15,6 +20,7 @@
   appendTo="body"
   position="right"
   [blockScroll]="true"
+  class="xl:hidden"
 >
   <ng-container [ngTemplateOutlet]="filters" />
 </p-sidebar>
