--- a/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
+++ b/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
@@ -1,4 +1,4 @@
-<div class="cart-item">
+<div class="cart-item !bg-content-background">
   <div class="book-details">
     <div class="book-details__image-wrapper">
       <img
