--- a/apps/client-web/src/app/app.component.html
+++ b/apps/client-web/src/app/app.component.html
@@ -1,5 +1,6 @@
 <p-toast />
 <div
+  #drawer
   class="flex flex-col-reverse w-full h-svh xl:flex-row xl:p-gap xl:min-h-svh xl:h-full"
 >
   <app-nav />
