--- a/libs/client-web/browse/feature/books/src/lib/books.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/books.component.html
@@ -3,8 +3,8 @@
   <div class="flex flex-col gap-base w-full overflow-x-hidden">
     <div class="flex flex-col xl:flex-row justify-between gap-base">
       <p-breadcrumb [model]="breadcrumbs()" />
-      <div class="flex items-center justify-between gap-base">
-        <lib-search class="" />
+      <div class="flex items-center justify-between gap-4">
+        <lib-search class="w-full" />
         <lib-filters class="xl:hidden" />
       </div>
     </div>
