--- a/libs/client-web/browse/ui/src/lib/accordion-filter-header/accordion-filter-header.component.html
+++ b/libs/client-web/browse/ui/src/lib/accordion-filter-header/accordion-filter-header.component.html
@@ -6,8 +6,10 @@
     styleClass="p-badge-secondary"
   />
   <p-button
+    [pTooltip]="selectedItemsCount() === 0 ? 'No selected items to reset' : ''"
     class="ml-3"
     icon="pi pi-trash"
+    [disabled]="selectedItemsCount() === 0"
     [text]="true"
     (onClick)="$event.stopImmediatePropagation(); clearFilterSelectedItems()"
   />
