--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -39,10 +39,10 @@
 
 <p-sidebar appSidebarLeft [(visible)]="isOpen" [blockScroll]="true">
   <ng-template pTemplate="header">
-    <ng-container [ngTemplateOutlet]="logo" />
+    <!-- <ng-container [ngTemplateOutlet]="logo" /> -->
   </ng-template>
   <div class="flex flex-col">
-    <ng-container [ngTemplateOutlet]="links" />
+    <!-- <ng-container [ngTemplateOutlet]="links" /> -->
   </div>
 </p-sidebar>
 
