--- a/libs/client-web/browse/feature/book/src/lib/book.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/book.component.html
@@ -3,23 +3,27 @@
 } @else if (error()) {
   <div>{{ error() }}</div>
 } @else if (book()) {
-  <div class="book">
-    <div class="book__image-wrapper">
+  <div
+    class="grid gap-base grid-cols-1 w-full xl:grid-cols-2 4xl:grid-cols-[1fr_1fr_0.4fr]"
+  >
+    <div
+      class="rounded-base w-full flex items-center justify-center xl:h-content overflow-hidden xl:sticky xl:top-8"
+    >
       <img
-        class="book__image-wrapper__image"
+        class="rounded-base w-full h-full"
         [src]="book()?.coverImage"
         [alt]="book()?.title + ' cover image'"
       />
     </div>
-    <div class="book__content">
-      <div class="book__content-wrapper">
+    <div class="flex flex-col gap-base">
+      <div class="flex flex-col gap-base w-full">
         <p-breadcrumb [model]="breadcrumbs()" />
-        <h3 class="book__title">
+        <h3 class="text-3xl md:text-4xl lg:text-5xl xl:text-8xl">
           {{ book()?.title }}
         </h3>
-        <div class="book__authors">
+        <div class="flex flex-wrap gap-4 mb-8">
           @for (author of book()?.authors; track author.id) {
-            <div class="book__authors__item">
+            <div class="text-xl text-muted-color">
               {{ author.name }}
             </div>
           }
@@ -27,11 +31,13 @@
         @if (book()?.tag) {
           <p-chip [label]="book()?.tag" />
         }
-        <div class="book__price-container price-container-default">
-          <span class="book__price-container__price">
+        <div
+          class="flex flex-col my-8 gap-4 bg-content-background p-4 rounded-base 4xl:hidden"
+        >
+          <h4 class="text-3xl font-bold md:text-4xl lg:text-5xl xl:text-6xl">
             {{ book()?.price | currency: 'USD' }}
-          </span>
-          <div class="book__price-container__quantity">
+          </h4>
+          <div class="flex justify-start flex-row items-center gap-4">
             <p-inputNumber
               [showButtons]="true"
               [formControl]="amount"
@@ -63,7 +69,7 @@
               />
             </div>
           </div>
-          <span class="book__price-container__available-prices">
+          <span class="text-sm font-semibold text-muted-color">
             {{
               availableQuantity() !== 1
                 ? 'There are ' + availableQuantity() + ' pieces left'
@@ -71,7 +77,7 @@
             }}
           </span>
         </div>
-        <div class="flex flex-column gap-2">
+        <div class="flex flex-col gap-2">
           <lib-detail-row
             label="Category"
             [value]="book()?.category?.name ?? ''"
@@ -90,20 +96,22 @@
           }
         </div>
       </div>
-      <div class="description">
-        <span>Description</span>
+      <div class="flex flex-col gap-4">
+        <span class="font-semibold text-xl">Description</span>
         <p>
           {{ book()?.description }}
         </p>
       </div>
     </div>
 
-    <div class="price-container-extended">
-      <div class="price-column">
-        <span class="price-column__price">
+    <div class="hidden 4xl:flex h-content justify-center w-full">
+      <div
+        class="4xl:sticky 4xl:top-8 flex flex-col items-center gap-12 overflow-y-auto h-fit w-full p-16 bg-content-background rounded-base"
+      >
+        <span class="text-6xl font-bold text-primary">
           {{ book()?.price | currency: 'USD' }}
         </span>
-        <div class="price-column__quantity">
+        <div class="flex flex-col items-center gap-4">
           <p-inputNumber
             [showButtons]="true"
             [formControl]="amount"
@@ -119,7 +127,7 @@
             incrementButtonIcon="pi pi-plus"
             decrementButtonIcon="pi pi-minus"
           />
-          <span class="book__price-container__available-prices">
+          <span class="text-sm font-semibold text-muted-color">
             {{
               availableQuantity() !== 1
                 ? 'There are ' + availableQuantity() + ' pieces left'
@@ -131,12 +139,10 @@
           [pTooltip]="amount.invalid ? 'Make sure that amount is correct' : ''"
           tooltipPosition="top"
           tooltipStyleClass="min-w-max"
-          class="price-column__add-btn"
         >
           <p-button
             label="Add to cart"
             icon="pi pi-cart-plus"
-            class="price-column__add-btn"
             size="large"
             [disabled]="amount.invalid"
             [loading]="loading()"
