Implemented server side rendering for better performence and SEO

--- a/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
@@ -1,4 +1,6 @@
-<div class="order-process">
+<div
+  class="grid grid-cols-1 gap-base p-4 w-full xl:grid-cols-2 2xl:grid-cols-[1fr_0.5fr] 3xl:grid-cols-[1fr_0.4fr]"
+>
   <div class="cart order-process__cart">
     <h2 class="order-process__header">Cart items</h2>
     <div
