--- a/libs/client-web/browse/feature/books/src/lib/filters/filters.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/filters/filters.component.html
@@ -2,7 +2,7 @@
   class="hidden xl:block sticky top-8 h-content rounded-base overflow-y-auto w-full"
 >
   <div class="min-h-min rounded-base overflow-hidden">
-    <ng-container ngSkipHydration [ngTemplateOutlet]="filters" />
+    <ng-container [ngTemplateOutlet]="filters" />
   </div>
 </div>
 
@@ -22,7 +22,7 @@
   [blockScroll]="true"
   class="xl:hidden"
 >
-  <ng-container ngSkipHydration [ngTemplateOutlet]="filters" />
+  <ng-container [ngTemplateOutlet]="filters" />
 </p-sidebar>
 
 <ng-template #filters>
