--- a/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
@@ -1,10 +1,10 @@
 <div
-  class="grid grid-cols-1 gap-base p-4 w-full xl:grid-cols-2 2xl:grid-cols-[1fr_0.5fr] 3xl:grid-cols-[1fr_0.4fr]"
+  class="grid grid-cols-1 gap-base w-full xl:grid-cols-2 2xl:grid-cols-[1fr_0.5fr] 3xl:grid-cols-[1fr_0.4fr]"
 >
-  <div class="cart order-process__cart">
-    <h2 class="order-process__header">Cart items</h2>
+  <div class="flex flex-col gap-base">
+    <h2 class="text-2xl xl:text-4xl">Cart items</h2>
     <div
-      class="order-process__cart__cart-items"
+      class="flex flex-col gap-base"
       [ngClass]="{
         loading: cartItemsLoading() && cartItems().length > 0,
       }"
@@ -22,8 +22,8 @@
       }
     </div>
   </div>
-  <div class="order-process__checkout">
-    <h2 class="order-process__header">Checkout form</h2>
+  <div class="w-full flex flex-col gap-base">
+    <h2 class="text-2xl xl:text-4xl">Checkout form</h2>
     <lib-summary />
   </div>
 </div>
