--- a/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
+++ b/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
@@ -1,4 +1,6 @@
-<div class="cart-item !bg-content-background">
+<div
+  class="cart-item min-h-24 flex justify-between w-full p-4 rounded-base !bg-content-background"
+>
   <div class="book-details">
     <div class="book-details__image-wrapper">
       <img
