--- a/libs/client-web/cart/ui/src/lib/section-wrapper/section-wrapper.component.html
+++ b/libs/client-web/cart/ui/src/lib/section-wrapper/section-wrapper.component.html
@@ -1,4 +1,4 @@
-<div class="section-wrapper">
-  <h3 class="section-wrapper__header">{{ header() }}</h3>
+<div class="flex flex-col gap-4 bg-content-background p-4 rounded-base">
+  <h3 class="text-lg">{{ header() }}</h3>
   <ng-content />
 </div>
