--- a/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
+++ b/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
@@ -1,6 +1,6 @@
 <div
   [routerLink]="['/book', book().id]"
-  class="flex flex-col rounded-base cursor-pointer max-w-book-card w-full bg-content-background"
+  class="flex flex-col rounded-base cursor-pointer sm:max-w-book-card w-full bg-content-background"
 >
   <div class="w-full h-96 rounded-base relative">
     <img
