--- a/libs/client-web/auth/feature/register/src/lib/register/register.component.html
+++ b/libs/client-web/auth/feature/register/src/lib/register/register.component.html
@@ -82,6 +82,7 @@
       [loading]="loading"
       loading-icon="pi pi-spin pi-spinner"
       iconPos="right"
+      [disabled]="registerForm.invalid"
       class="mt-5 w-full"
     />
   </form>
