--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -39,10 +39,10 @@
 
 <p-sidebar appSidebarLeft [(visible)]="isOpen" [blockScroll]="true">
   <ng-template pTemplate="header">
-    <!-- <ng-container [ngTemplateOutlet]="logo" /> -->
+    <ng-container [ngTemplateOutlet]="logo" />
   </ng-template>
   <div class="flex flex-col">
-    <!-- <ng-container [ngTemplateOutlet]="links" /> -->
+    <ng-container [ngTemplateOutlet]="links" />
   </div>
 </p-sidebar>
 
@@ -88,7 +88,6 @@
       @if (isAuthenticated()) {
         <a
           routerLink="/account"
-          routerLinkActive="bg-surface-100 dark:bg-surface-700"
           class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
         >
           <i class="pi pi-user"></i>
