--- a/libs/client-web/auth/feature/login/src/lib/login/login.component.html
+++ b/libs/client-web/auth/feature/login/src/lib/login/login.component.html
@@ -68,6 +68,7 @@
       loading-icon="pi pi-spin pi-spinner"
       iconPos="right"
       [style]="{ width: '100%' }"
+      [disabled]="loginForm.invalid"
       class="w-full mt-5"
     />
   </form>
