--- a/libs/client-web/browse/feature/book/src/lib/book.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/book.component.html
@@ -1,7 +1,26 @@
 @if (loading()) {
-  <div>Loading...</div>
+  <div
+    class="grid gap-base grid-cols-1 w-full xl:grid-cols-2 4xl:grid-cols-[1fr_1fr_0.4fr]"
+  >
+    <div class="rounded-base xl:h-content overflow-hidden xl:sticky xl:top-8">
+      <p-skeleton width="100%" height="100%" />
+    </div>
+    <div class="flex flex-col gap-base">
+      <p-skeleton width="100%" height="3rem" />
+      <p-skeleton width="70%" height="6rem" />
+      <p-skeleton width="15rem" height="10rem" />
+      <p-skeleton height="3rem" />
+      <p-skeleton width="50%" height="3rem" />
+      <p-skeleton width="16rem" height="3rem" />
+      <p-skeleton width="80%" height="3rem" />
+      <p-skeleton height="20rem" />
+    </div>
+    <div>
+      <p-skeleton width="100%" height="24rem" />
+    </div>
+  </div>
 } @else if (error()) {
-  <div>{{ error() }}</div>
+  <div class="text-5xl text-center mt-10">{{ error() }}</div>
 } @else if (book()) {
   <div
     class="grid gap-base grid-cols-1 w-full xl:grid-cols-2 4xl:grid-cols-[1fr_1fr_0.4fr]"
@@ -52,22 +71,21 @@
               incrementButtonIcon="pi pi-plus"
               decrementButtonIcon="pi pi-minus"
             />
-            <div
+            <p-button
               [pTooltip]="
                 amount.invalid ? 'Make sure that amount is correct' : ''
               "
               tooltipPosition="top"
               tooltipStyleClass="min-w-max"
-            >
-              <p-button
-                label="Add to cart"
-                icon="pi pi-cart-plus"
-                size="large"
-                [disabled]="amount.invalid"
-                [loading]="loading()"
-                (onClick)="addToCart()"
-              />
-            </div>
+              styleClass="w-full"
+              class="w-full"
+              label="Add to cart"
+              icon="pi pi-cart-plus"
+              size="large"
+              [disabled]="amount.invalid"
+              [loading]="loading()"
+              (onClick)="addToCart()"
+            />
           </div>
           <span class="text-sm font-semibold text-muted-color">
             {{
@@ -108,7 +126,7 @@
       <div
         class="4xl:sticky 4xl:top-8 flex flex-col items-center gap-12 overflow-y-auto h-fit w-full p-16 bg-content-background rounded-base"
       >
-        <span class="text-6xl font-bold text-primary">
+        <span class="text-6xl font-bold">
           {{ book()?.price | currency: 'USD' }}
         </span>
         <div class="flex flex-col items-center gap-4">
